CompilerInterpreteur/interpreter.output
Grammar

    0 $accept: Content $end

    1 Content: /* empty */
    2        | Line Content

    3 Line: Instruction tSEMICOLON

    4 Instruction: Add
    5            | Mul
    6            | Sou
    7            | Div
    8            | Cop
    9            | Afc
   10            | Load
   11            | Store
   12            | Equ
   13            | Inf
   14            | Infe
   15            | Sup
   16            | Supe
   17            | Jmp
   18            | Jmpc

   19 Add: tADD tNB tNB tNB

   20 Mul: tMUL tNB tNB tNB

   21 Sou: tSOU tNB tNB tNB

   22 Div: tDIV tNB tNB tNB

   23 Cop: tCOP tNB tNB

   24 Afc: tAFC tNB tNB

   25 Load: tLOAD tNB tNB

   26 Store: tSTORE tNB tNB

   27 Equ: tEQU tNB tNB tNB

   28 Inf: tINF tNB tNB tNB

   29 Infe: tINFE tNB tNB tNB

   30 Sup: tSUP tNB tNB tNB

   31 Supe: tSUPE tNB tNB tNB

   32 Jmp: tJMP tNB

   33 Jmpc: tJMPC tNB tNB


Terminals, with rules where they appear

$end (0) 0
error (256)
tADD (258) 19
tMUL (259) 20
tSOU (260) 21
tDIV (261) 22
tCOP (262) 23
tAFC (263) 24
tLOAD (264) 25
tSTORE (265) 26
tEQU (266) 27
tINF (267) 28
tINFE (268) 29
tSUP (269) 30
tSUPE (270) 31
tJMP (271) 32
tJMPC (272) 33
tNB (273) 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
tSEMICOLON (274) 3


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
Content (21)
    on left: 1 2, on right: 0 2
Line (22)
    on left: 3, on right: 2
Instruction (23)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18,
    on right: 3
Add (24)
    on left: 19, on right: 4
Mul (25)
    on left: 20, on right: 5
Sou (26)
    on left: 21, on right: 6
Div (27)
    on left: 22, on right: 7
Cop (28)
    on left: 23, on right: 8
Afc (29)
    on left: 24, on right: 9
Load (30)
    on left: 25, on right: 10
Store (31)
    on left: 26, on right: 11
Equ (32)
    on left: 27, on right: 12
Inf (33)
    on left: 28, on right: 13
Infe (34)
    on left: 29, on right: 14
Sup (35)
    on left: 30, on right: 15
Supe (36)
    on left: 31, on right: 16
Jmp (37)
    on left: 32, on right: 17
Jmpc (38)
    on left: 33, on right: 18


state 0

    0 $accept: . Content $end

    tADD    shift, and go to state 1
    tMUL    shift, and go to state 2
    tSOU    shift, and go to state 3
    tDIV    shift, and go to state 4
    tCOP    shift, and go to state 5
    tAFC    shift, and go to state 6
    tLOAD   shift, and go to state 7
    tSTORE  shift, and go to state 8
    tEQU    shift, and go to state 9
    tINF    shift, and go to state 10
    tINFE   shift, and go to state 11
    tSUP    shift, and go to state 12
    tSUPE   shift, and go to state 13
    tJMP    shift, and go to state 14
    tJMPC   shift, and go to state 15

    $default  reduce using rule 1 (Content)

    Content      go to state 16
    Line         go to state 17
    Instruction  go to state 18
    Add          go to state 19
    Mul          go to state 20
    Sou          go to state 21
    Div          go to state 22
    Cop          go to state 23
    Afc          go to state 24
    Load         go to state 25
    Store        go to state 26
    Equ          go to state 27
    Inf          go to state 28
    Infe         go to state 29
    Sup          go to state 30
    Supe         go to state 31
    Jmp          go to state 32
    Jmpc         go to state 33


state 1

   19 Add: tADD . tNB tNB tNB

    tNB  shift, and go to state 34


state 2

   20 Mul: tMUL . tNB tNB tNB

    tNB  shift, and go to state 35


state 3

   21 Sou: tSOU . tNB tNB tNB

    tNB  shift, and go to state 36


state 4

   22 Div: tDIV . tNB tNB tNB

    tNB  shift, and go to state 37


state 5

   23 Cop: tCOP . tNB tNB

    tNB  shift, and go to state 38


state 6

   24 Afc: tAFC . tNB tNB

    tNB  shift, and go to state 39


state 7

   25 Load: tLOAD . tNB tNB

    tNB  shift, and go to state 40


state 8

   26 Store: tSTORE . tNB tNB

    tNB  shift, and go to state 41


state 9

   27 Equ: tEQU . tNB tNB tNB

    tNB  shift, and go to state 42


state 10

   28 Inf: tINF . tNB tNB tNB

    tNB  shift, and go to state 43


state 11

   29 Infe: tINFE . tNB tNB tNB

    tNB  shift, and go to state 44


state 12

   30 Sup: tSUP . tNB tNB tNB

    tNB  shift, and go to state 45


state 13

   31 Supe: tSUPE . tNB tNB tNB

    tNB  shift, and go to state 46


state 14

   32 Jmp: tJMP . tNB

    tNB  shift, and go to state 47


state 15

   33 Jmpc: tJMPC . tNB tNB

    tNB  shift, and go to state 48


state 16

    0 $accept: Content . $end

    $end  shift, and go to state 49


state 17

    2 Content: Line . Content

    tADD    shift, and go to state 1
    tMUL    shift, and go to state 2
    tSOU    shift, and go to state 3
    tDIV    shift, and go to state 4
    tCOP    shift, and go to state 5
    tAFC    shift, and go to state 6
    tLOAD   shift, and go to state 7
    tSTORE  shift, and go to state 8
    tEQU    shift, and go to state 9
    tINF    shift, and go to state 10
    tINFE   shift, and go to state 11
    tSUP    shift, and go to state 12
    tSUPE   shift, and go to state 13
    tJMP    shift, and go to state 14
    tJMPC   shift, and go to state 15

    $default  reduce using rule 1 (Content)

    Content      go to state 50
    Line         go to state 17
    Instruction  go to state 18
    Add          go to state 19
    Mul          go to state 20
    Sou          go to state 21
    Div          go to state 22
    Cop          go to state 23
    Afc          go to state 24
    Load         go to state 25
    Store        go to state 26
    Equ          go to state 27
    Inf          go to state 28
    Infe         go to state 29
    Sup          go to state 30
    Supe         go to state 31
    Jmp          go to state 32
    Jmpc         go to state 33


state 18

    3 Line: Instruction . tSEMICOLON

    tSEMICOLON  shift, and go to state 51


state 19

    4 Instruction: Add .

    $default  reduce using rule 4 (Instruction)


state 20

    5 Instruction: Mul .

    $default  reduce using rule 5 (Instruction)


state 21

    6 Instruction: Sou .

    $default  reduce using rule 6 (Instruction)


state 22

    7 Instruction: Div .

    $default  reduce using rule 7 (Instruction)


state 23

    8 Instruction: Cop .

    $default  reduce using rule 8 (Instruction)


state 24

    9 Instruction: Afc .

    $default  reduce using rule 9 (Instruction)


state 25

   10 Instruction: Load .

    $default  reduce using rule 10 (Instruction)


state 26

   11 Instruction: Store .

    $default  reduce using rule 11 (Instruction)


state 27

   12 Instruction: Equ .

    $default  reduce using rule 12 (Instruction)


state 28

   13 Instruction: Inf .

    $default  reduce using rule 13 (Instruction)


state 29

   14 Instruction: Infe .

    $default  reduce using rule 14 (Instruction)


state 30

   15 Instruction: Sup .

    $default  reduce using rule 15 (Instruction)


state 31

   16 Instruction: Supe .

    $default  reduce using rule 16 (Instruction)


state 32

   17 Instruction: Jmp .

    $default  reduce using rule 17 (Instruction)


state 33

   18 Instruction: Jmpc .

    $default  reduce using rule 18 (Instruction)


state 34

   19 Add: tADD tNB . tNB tNB

    tNB  shift, and go to state 52


state 35

   20 Mul: tMUL tNB . tNB tNB

    tNB  shift, and go to state 53


state 36

   21 Sou: tSOU tNB . tNB tNB

    tNB  shift, and go to state 54


state 37

   22 Div: tDIV tNB . tNB tNB

    tNB  shift, and go to state 55


state 38

   23 Cop: tCOP tNB . tNB

    tNB  shift, and go to state 56


state 39

   24 Afc: tAFC tNB . tNB

    tNB  shift, and go to state 57


state 40

   25 Load: tLOAD tNB . tNB

    tNB  shift, and go to state 58


state 41

   26 Store: tSTORE tNB . tNB

    tNB  shift, and go to state 59


state 42

   27 Equ: tEQU tNB . tNB tNB

    tNB  shift, and go to state 60


state 43

   28 Inf: tINF tNB . tNB tNB

    tNB  shift, and go to state 61


state 44

   29 Infe: tINFE tNB . tNB tNB

    tNB  shift, and go to state 62


state 45

   30 Sup: tSUP tNB . tNB tNB

    tNB  shift, and go to state 63


state 46

   31 Supe: tSUPE tNB . tNB tNB

    tNB  shift, and go to state 64


state 47

   32 Jmp: tJMP tNB .

    $default  reduce using rule 32 (Jmp)


state 48

   33 Jmpc: tJMPC tNB . tNB

    tNB  shift, and go to state 65


state 49

    0 $accept: Content $end .

    $default  accept


state 50

    2 Content: Line Content .

    $default  reduce using rule 2 (Content)


state 51

    3 Line: Instruction tSEMICOLON .

    $default  reduce using rule 3 (Line)


state 52

   19 Add: tADD tNB tNB . tNB

    tNB  shift, and go to state 66


state 53

   20 Mul: tMUL tNB tNB . tNB

    tNB  shift, and go to state 67


state 54

   21 Sou: tSOU tNB tNB . tNB

    tNB  shift, and go to state 68


state 55

   22 Div: tDIV tNB tNB . tNB

    tNB  shift, and go to state 69


state 56

   23 Cop: tCOP tNB tNB .

    $default  reduce using rule 23 (Cop)


state 57

   24 Afc: tAFC tNB tNB .

    $default  reduce using rule 24 (Afc)


state 58

   25 Load: tLOAD tNB tNB .

    $default  reduce using rule 25 (Load)


state 59

   26 Store: tSTORE tNB tNB .

    $default  reduce using rule 26 (Store)


state 60

   27 Equ: tEQU tNB tNB . tNB

    tNB  shift, and go to state 70


state 61

   28 Inf: tINF tNB tNB . tNB

    tNB  shift, and go to state 71


state 62

   29 Infe: tINFE tNB tNB . tNB

    tNB  shift, and go to state 72


state 63

   30 Sup: tSUP tNB tNB . tNB

    tNB  shift, and go to state 73


state 64

   31 Supe: tSUPE tNB tNB . tNB

    tNB  shift, and go to state 74


state 65

   33 Jmpc: tJMPC tNB tNB .

    $default  reduce using rule 33 (Jmpc)


state 66

   19 Add: tADD tNB tNB tNB .

    $default  reduce using rule 19 (Add)


state 67

   20 Mul: tMUL tNB tNB tNB .

    $default  reduce using rule 20 (Mul)


state 68

   21 Sou: tSOU tNB tNB tNB .

    $default  reduce using rule 21 (Sou)


state 69

   22 Div: tDIV tNB tNB tNB .

    $default  reduce using rule 22 (Div)


state 70

   27 Equ: tEQU tNB tNB tNB .

    $default  reduce using rule 27 (Equ)


state 71

   28 Inf: tINF tNB tNB tNB .

    $default  reduce using rule 28 (Inf)


state 72

   29 Infe: tINFE tNB tNB tNB .

    $default  reduce using rule 29 (Infe)


state 73

   30 Sup: tSUP tNB tNB tNB .

    $default  reduce using rule 30 (Sup)


state 74

   31 Supe: tSUPE tNB tNB tNB .

    $default  reduce using rule 31 (Supe)
